Work for #5877 - TOC: mobile layout - overlap fixes + close on action

--- a/src/common-styles/sv-progress-toc.scss
+++ b/src/common-styles/sv-progress-toc.scss
@@ -43,7 +43,7 @@
   min-width: auto;
   height: auto;
   background-color: transparent;
-  z-index: 1000;
+  z-index: 15;
   border-radius: calcSize(3);
 
   &>div {
